Add doctype, lang, and charset to index view

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,7 @@
-html
+doctype html
+html(lang='en')
   head
+    meta(charset='utf-8')
     title Composite Scrap Database
   body
     h1 Composite Scrap Database
