--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,15 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content='A resource to find information on composite scrap, available composite scrap, and existing composite recyclers.')
     title Composite Scrap Database
+    link(
+      rel='stylesheet'
+      href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css'
+      integrity='sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb'
+      crossorigin='anonymous'
+    )
   body
-    h1 Composite Scrap Database
+    main(role='main' class='container')
+      h1 Composite Scrap Database
