Add a placeholder database view

--- a/views/database.pug
+++ b/views/database.pug
@@ -1,4 +1,13 @@
 extends layout
 
 block content
-  // Not implemented
+  div(class='row justify-content-center')
+    p= path
+  div(class='row justify-content-center')
+    div(class='card' style='width: 30rem;')
+      div(class='card-body')
+        p Material:
+        p Origin:
+        p Method:
+        p Location:
+        p Quantity:
