--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(lang='en')
       integrity='sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb'
       crossorigin='anonymous'
     )
-    link(href='style.css' rel='stylesheet')
+    link(rel='stylesheet' href='/style.css')
 
   body
     div(class='container')
@@ -33,10 +33,10 @@ html(lang='en')
             a(class='nav-item nav-link' href='/database') Database
             a(class='nav-item nav-link' href='/resources') Resources
             a(class='nav-item nav-link' href='/contact') Contact
-    
+
       main(role='main')
         block content
-    
+
     // Bootstrap JavaScript
     script(
         src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
@@ -50,6 +50,6 @@ html(lang='en')
     )
     script(
       src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js'
-      integrity='sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ' 
+      integrity='sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ'
       crossorigin='anonymous'
     )
