--- a/views/database.pug
+++ b/views/database.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div(class='row justify-content-center')
-    p= path
+    p #{path.join(' - ')}
   div(class='row justify-content-center')
     div(class='card' style='width: 30rem;')
       div(class='card-body')
