Don't highlight current page in the layout

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,7 +27,7 @@ html(lang='en')
           span(class='navbar-toggler-icon')
         div(class='collapse navbar-collapse justify-content-md-center' id='navbarNavAltMarkup')
           div(class='navbar-nav')
-            a(class='nav-item nav-link active' href='/') Home
+            a(class='nav-item nav-link' href='/') Home
             a(class='nav-item nav-link' href='/about') About
             a(class='nav-item nav-link' href='/modules') Modules
             a(class='nav-item nav-link' href='/database') Database
