--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,11 +28,12 @@ html(lang='en')
         div(class='collapse navbar-collapse justify-content-md-center' id='navbarNavAltMarkup')
           div(class='navbar-nav')
             a(class='nav-item nav-link' href='/') Home
-            a(class='nav-item nav-link' href='/about') About
+            a(class='nav-item nav-link' href='/contact') Contact
+            a(class='nav-item nav-link' href='/education') Education
+            a(class='nav-item nav-link' href='/industry') Industry
+            a(class='nav-item nav-link' href='/resources') Resources
             a(class='nav-item nav-link' href='/modules') Modules
             a(class='nav-item nav-link' href='/database') Database
-            a(class='nav-item nav-link' href='/resources') Resources
-            a(class='nav-item nav-link' href='/contact') Contact
 
       main(role='main')
         block content
