Add support for child scripts in layout templates

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,6 +38,9 @@ html(lang='en')
       main(role='main')
         block content
 
+    // Child JavaScript
+    block scripts
+
     // Bootstrap JavaScript
     script(
         src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
