--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(lang='en')
       integrity='sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb'
       crossorigin='anonymous'
     )
-    link(rel='stylesheet' href='/style.css')
+    link(rel='stylesheet' href='/css/style.css')
 
   body
     div(class='container')
