Add a mock database result for presentation

--- a/views/database.pug
+++ b/views/database.pug
@@ -15,10 +15,23 @@ block content
           option(value=opt.toLowerCase().replace(' ', '-'))= opt
   else
     div(class='row justify-content-center')
-      div(class='card' style='width: 30rem;')
+      div(class='card' style='width: 40rem')
         div(class='card-body')
-          p Material:
-          p Origin:
-          p Method:
-          p Location:
-          p Quantity:
+          h4(class='card-title') PA-6 / 50 wt. % GF Chopped Unidirectional Tape
+          p
+            b Material Notes:
+            |  Original form was continuous, this scrap comes from trim-offs. Various shapes and sizes.
+          p
+            b Origin:
+            |  Hardin Composites
+          p
+            b Manufacturing Method:
+            a(href='javascript:void(0)')  Pultrusion
+          p
+            b Current Location:
+            |  University of Alabama at Birmingham (UAB)
+          p
+            b Amount:
+            |  500 lbs
+          a(class='btn btn-primary mr-2' href='javascript:void(0)') Save
+          a(class='btn btn-primary' href='javascript:void(0)') Query
