Add folders page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,7 @@ html(lang='en')
             a(class='nav-item nav-link' href='/resources') Resources
             a(class='nav-item nav-link' href='/modules') Modules
             a(class='nav-item nav-link' href='/database') Database
+            a(class='nav-item nav-link' href='/folder') Folder
 
       main(role='main')
         block content
@@ -43,9 +44,9 @@ html(lang='en')
 
     // Bootstrap JavaScript
     script(
-        src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
-        ntegrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
-        crossorigin='anonymous'
+      src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
+      ntegrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
+      crossorigin='anonymous'
     )
     script(
       src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js'
