Migrate more content from original site

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,8 +29,7 @@ html(lang='en')
           div(class='navbar-nav')
             a(class='nav-item nav-link' href='/') Home
             a(class='nav-item nav-link' href='/contact') Contact
-            a(class='nav-item nav-link' href='/education') Education
-            a(class='nav-item nav-link' href='/industry') Industry
+            a(class='nav-item nav-link' href='/overview') Overview
             a(class='nav-item nav-link' href='/resources') Resources
             a(class='nav-item nav-link' href='/modules') Modules
             a(class='nav-item nav-link' href='/database') Database
