--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,12 @@
 body {
-  padding-top: 20px;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.header {
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+  border-bottom: .05rem solid #e5e5e5;
 }
 
 .jumbotron {
