--- a/views/index.pug
+++ b/views/index.pug
@@ -4,13 +4,20 @@ extends layout
 block content
   div(class='jumbotron')
     h1(class='display-3') Composite Scrap Database
-    p(class='lead') Find additional information on composite scrap, available composite scrap, and existing composite recyclers.
-    p: a(class='btn btn-primary btn-lg' role='button' href='database') Learn more &raquo
+    p(class='lead') Find information on composite scrap, available composite scrap, and existing composite recyclers.
+    p: a(class='btn btn-primary btn-lg' role='button' href='database') Search &raquo;
 
-  h2 Welcome to the Composites Recycling Technician Education Program (CRTEP) Project
-  
-  p The <strong>CRTEP</strong> project will provide a workforce education solution for technicians who can safely and efficiently identify, handle, sort, track and catalogue composite waste stream material, diverted during the manufacturing process, for future use in secondary fabrication and manufacturing. The project will advance knowledge across multiple fields and industries as protocols and training pathways are created that provide technicians with the foundational knowledge, skills and abilities needed to handle composite waste stream materials, treating them as a new resource. Incumbent technicians will have the opportunity to enhance core skill sets, making them more competitive in the work environment. New students will benefit from cutting-edge curriculum. Industry will explore new roles for technicians, and new methods to reclaim and repurpose materials.
-  
-  p <em>This innovative project has been established through funding from the National Science Foundation, and includes the following partners: Skagit Valley College (lead college), The University of Alabama at Birmingham, Peninsula College, and the National Resource Center for Materials Technology Education (MatEdu), housed at Edmonds Community College.</em>
-  
-  p The <strong>CRTEP</strong> project would not be possible without the support of our many partners. We would like to thank the <em>National Science Foundation, American Composites Manufacturing Association (ACMA), Composite Recycling Technology Center (CRTC), Connora Technologies, Fiberglass Supply, Hexcel Corporation, Janicki Industries, Northwest Workforce Council, Polystrand Inc., Southeast Maritime and Transportation Center (SMART), The Boeing Company , The Composites Institute (IACMI).</em>
+  div(class='row')
+    div(class='col')
+      h3 What are composites?
+      p
+        | A composite is a material made from two or more separate materials or elements that when combined create a stronger material.
+      p: a(class='btn btn-secondary' role='button' href='http://compositeslab.com/composites-101/' target='_blank') Learn more &raquo;
+    div(class='col')
+      h3 A composites industry overview
+      p Read more about the composites industry and find additional resources.
+      p: a(class='btn btn-secondary' role='button' href='') View details &raquo;
+    div(class='col')
+      h3 The CRTEP project
+      p Read more about the Composites Recycling Technician Education Program (CRTEP) and explore the educational modules.
+      p: a(class='btn btn-secondary' role='button' href='') View details &raquo;
