--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,9 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description' content='A resource to find information on composite scrap, available composite scrap, and existing composite recyclers.')
+    
     title Composites Recycling
+    
     link(
       rel='stylesheet'
       href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css'
@@ -15,33 +17,30 @@ html(lang='en')
 
   body
     div(class='container')
-      h3(class='text-muted') Composites Recycling
-      nav(class='navbar navbar-expand-lg navbar-light bg-light mb-3')
-        button(
-          class='navbar-toggler'
-          type='button'
-          data-toggle='collapse'
-          data-target='#navbarNavAltMarkup'
-          aria-controls='navbarNavAltMarkup'
-        )
-          span(class='navbar-toggler-icon')
-        div(class='collapse navbar-collapse justify-content-md-center' id='navbarNavAltMarkup')
-          div(class='navbar-nav')
-            a(class='nav-item nav-link' href='/') Home
-            a(class='nav-item nav-link' href='/contact') Contact
-            a(class='nav-item nav-link' href='/overview') Overview
-            a(class='nav-item nav-link' href='/resources') Resources
-            a(class='nav-item nav-link' href='/modules') Modules
-            a(class='nav-item nav-link' href='/database') Database
-            a(class='nav-item nav-link' href='/folder') Folder
-
+      header(class='header clearfix')
+        nav
+          ul(class='nav nav-pills float-right')
+            li(class='nav-item')
+              a(class='nav-link' href='/') Home
+            li(class='nav-item')
+              a(class='nav-link' href='/about') About
+            li(class='nav-item')
+              a(class='nav-link' href='/overview') Overview
+            li(class='nav-item')
+              a(class='nav-link' href='/modules') Modules
+            li(class='nav-item')
+              a(class='nav-link' href='/database') Database
+            li(class='nav-item')
+              a(class='nav-link' href='/contact') Contact
+        h3(class='text-muted') Composites Recycling
+      
       main(role='main')
         block content
 
-    // Child JavaScript
+    //- Child JavaScript
     block scripts
 
-    // Bootstrap JavaScript
+    //- Bootstrap JavaScript
     script(
       src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
       ntegrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
