Add forgotten links to buttons

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,8 +16,8 @@ block content
     div(class='col')
       h3 A composites industry overview
       p Read more about the composites industry and find additional resources.
-      p: a(class='btn btn-secondary' role='button' href='') View details &raquo;
+      p: a(class='btn btn-secondary' role='button' href='/overview') View details &raquo;
     div(class='col')
       h3 The CRTEP project
       p Read more about the Composites Recycling Technician Education Program (CRTEP) and explore the educational modules.
-      p: a(class='btn btn-secondary' role='button' href='') View details &raquo;
+      p: a(class='btn btn-secondary' role='button' href='/about') View details &raquo;
