--- a/views/about.pug
+++ b/views/about.pug
@@ -11,3 +11,11 @@ block content
     div(class='col')
       p This innovative project has been established through funding from the National Science Foundation, and includes the following partners: Skagit Valley College (lead college), The University of Alabama at Birmingham, Peninsula College, and the National Resource Center for Materials Technology Education (MatEdu), housed at Edmonds Community College.
       p The <strong>CRTEP</strong> project would not be possible without the support of our many partners. We would like to thank the <em>National Science Foundation, American Composites Manufacturing Association (ACMA), Composite Recycling Technology Center (CRTC), Connora Technologies, Fiberglass Supply, Hexcel Corporation, Janicki Industries, Northwest Workforce Council, Polystrand Inc., Southeast Maritime and Transportation Center (SMART), The Boeing Company , The Composites Institute (IACMI).</em>
+  div(class='row')
+    div(class='text-center')
+      img(src='http://crtep.org/wp-content/uploads/2016/08/svc-red-1-300x208.jpg' alt='Skagit Valley College' class='img-fluid')
+      img(src='http://crtep.org/wp-content/uploads/2016/08/NSF-untitled.png' alt='NSF' class='img-fluid')
+      img(src='http://crtep.org/wp-content/uploads/2016/08/U-of-A-Birmingham-LEVEL_1_centered.gif' alt='UAB' class='img-fluid')
+      img(src='http://crtep.org/wp-content/uploads/2016/08/MatEdU-2-Bus-Card-300x214.jpg' alt='MatEdu' class='img-fluid')
+      img(src='http://crtep.org/wp-content/uploads/2016/08/Penninsula-images-300x92.jpg' alt='Peninsula College' class='img-fluid')
+      
