Make list group items a little smaller

--- a/views/modules.pug
+++ b/views/modules.pug
@@ -17,7 +17,7 @@ block content
                         'Module 9: Design for Recycling',
                         'Module 10: Understanding Public Perception and Consumer Habits']
         for value, index in titles
-          a(class='list-group-item list-group-item-action' id='module-'+index+'-list' data-toggle='list' href='#module-'+index role='tab')= value
+          a(class='list-group-item list-group-item-action' id='module-'+index+'-list' data-toggle='list' href='#module-'+index role='tab' style='font-size: 0.85rem;')= value
 
     div(class='col')
       div(class='tab-content' id='nav-tabContent')
