Hook up the navigation pills

--- a/views/database.pug
+++ b/views/database.pug
@@ -2,6 +2,8 @@ extends layout
 
 block scripts
   script(src='/js/database.js')
+  script(src='/js/nav.js')
+  script window.onload = activate('contact')
 
 block content
   div(class='row justify-content-center')
