--- a/views/overview.pug
+++ b/views/overview.pug
@@ -1,5 +1,9 @@
 extends layout
 
+block scripts
+  script(src='/js/nav.js')
+  script window.onload = activate('overview')
+
 block content
   div(class='row')
     div(class='col')
