Fix incorrect link on database page

--- a/views/database.pug
+++ b/views/database.pug
@@ -3,7 +3,7 @@ extends layout
 block scripts
   script(src='/js/database.js')
   script(src='/js/nav.js')
-  script window.onload = activate('contact')
+  script window.onload = activate('database')
 
 block content
   div(class='row justify-content-center')
